--- a/index.html
+++ b/index.html
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/png"
-      href="/solid-program-web/src/assets/Solid-Favicon.png"
-    />
+    <link rel="icon" type="image/png" href="/src/assets/Solid-Favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solid Program - Fitness Program</title>
   </head>
