Agregue h1 al mainsection y meta descripcion al index

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/png" href="/src/assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Solid Program - Fitness Program</title>
+    <meta
+      name="description"
+      content="Solid Program ofrece Programas de Entrenamiento Online para personas con diferentes objetivos y nivel de condición fisica"
+    />
   </head>
   <body>
     <div id="root"></div>
